syntax = "proto3";

option go_package= "client/proto";

package proto;

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string reply=1;
}

service Greeter{
  rpc SayHello(HelloRequest) returns (HelloResponse){};
}




